# emmentalembed

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: example.csv  example.fasta
plm/: pyproject.toml  setup_plm.sh
plm/scripts/: ankh.sh  esm1-2_650M.sh  esm2_15B.sh  esm2_3B.sh  prot_t5.sh  proteinbert.sh  unirep.sh
plm/src/esm/: download_models.py
plm/src/proteinbert/: extract.py
scripts/: embed.sh  fold_af3.sh  fold_boltz.sh  fold_chai.sh  setup_fold_env.sh
scripts/process/: process_isoforms.py
src/emmentalembed/: __init__.py  cli.py  config.py  evaluate.py  extract.py  io.py  process.py  types.py
src/emmentalembed/fold/: __init__.py  af3.py  boltz.py  chai.py
tests/: conftest.py  test_config.py  test_install.py  test_io.py
